# single-merkl-campaign-sim

./: .gitignore  Dockerfile  main.py  pyproject.toml  readme.md  todo.md
competitor-example/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
competitor-example/config/: default.yaml
competitor-example/docs/: methodology.md
competitor-example/examples/: bring_your_own_data.py  sample_data_template.csv  synthetic_demo.py
competitor-example/src/bayesian_incentives/: __init__.py
competitor-example/src/bayesian_incentives/analysis/: __init__.py  profitability.py  report.py
competitor-example/src/bayesian_incentives/models/: __init__.py  decay.py  elasticity.py  independence.py  interest_rate.py  regimes.py
competitor-example/src/bayesian_incentives/optimization/: __init__.py  bayesian.py  grid_search.py
competitor-example/src/bayesian_incentives/visualization/: __init__.py  plots.py
competitor-example/tests/: test_data.py  test_models.py  test_optimization.py
pages/: admin_panel.py  login.py  logout.py
sim/: README.md  repo-structure.md
sim/campaign/: __init__.py  agents.py  analysis.py  backtest.py  base_apy.py  data.py  engine.py  evm_data.py  example_morpho_pyusd.py  historical.py  kamino_data.py  multi_venue.py  optimizer.py  serialize.py  state.py  venue_registry.py
sim/configs/: pyusd_venues.json  venues.json  venues_test.json
sim/dashboard/: app.py  app2.py  app3.py  app5.py  kraken_split.py  multi_venue_app.py
sim/dashboard/heuristic/: app2.py
sim/dashboard/pages/: 2_Kraken_Split.py
sim/dune/: __init__.py  queries.py  sync.py
sim/dune/data/: .gitkeep
sim/results/morpho_pyusd/: mc_diagnostics.json  metadata.json  surfaces.npz
sim/results/morpho_pyusd_v2/: mc_diagnostics.json  metadata.json  surfaces.npz
sim/results/test_allocation/: allocation.json
sim/results/test_allocation/aave_pyusd_core/: mc_diagnostics.json  metadata.json  surfaces.npz
sim/results/test_allocation/euler_sentora_pyusd/: mc_diagnostics.json  metadata.json  surfaces.npz
sim/results/test_allocation/morpho_pyusd/: mc_diagnostics.json  metadata.json  surfaces.npz
sim/scripts/: compute_surface.py  test_apy_sensitive.py  test_curve_data.py  test_euler_caps.py  test_euler_caps2.py
sim/tests/: __init__.py  test_allocation.py  test_analysis.py  test_campaign.py  test_cap_taper.py  test_caps.py  test_competitor_venues.py  test_data_fetch.py  test_forced_rate_and_floor.py  test_hardening.py  test_irm.py  test_set_apr.py  test_stickiness.py  test_wiring.py
src/: database.py  utils.py
